--- a/JsonArray.cls
+++ b/JsonArray.cls
@@ -12,7 +12,7 @@ Attribute VB_Creatable = True
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 ' George Karras, Kalithea, Greece
-' Version 3
+' Version 3.2
 ' GNU Lesser General Public License version 3
 Option Explicit
 Private Declare Function GetLocaleInfoW Lib "kernel32" (ByVal Locale As Long, ByVal LCType As Long, ByVal lpLCData As Long, ByVal cchData As Long) As Long
@@ -124,7 +124,7 @@ For i = 1 To Len(RHS)
                     Case Is > 255
                        ch = "\u" & Right$("000" & Hex$(AscW(ch)), 4)
                 End Select
-                If cursor + Len(ch) > Len(StringToEscapeStr) Then StringToEscapeStr = StringToEscapeStr + space$(500)
+                If cursor + Len(ch) > Len(StringToEscapeStr) Then StringToEscapeStr = StringToEscapeStr + Space$(500)
                 Mid$(StringToEscapeStr, cursor, Len(ch)) = ch
                 cursor = cursor + Len(ch) - 1
 Next
@@ -153,7 +153,7 @@ Dim i As Long, cursor As Long, ch As String
                     Case "u":      ch = ParseHexChar(RHS, cursor, Len(RHS))
                 End Select
         End Select
-                If i + Len(ch) > Len(EscapeStrToString) Then EscapeStrToString = EscapeStrToString + space$(500)
+                If i + Len(ch) > Len(EscapeStrToString) Then EscapeStrToString = EscapeStrToString + Space$(500)
                 Mid$(EscapeStrToString, i, Len(ch)) = ch
                 i = i + Len(ch) - 1
     Next
@@ -238,7 +238,7 @@ again:
 If n > UBound(part$) Then Exit Sub
 If TypeOf m Is JsonArray Then
     Set ma = m
-    w = val(part$(n))
+    w = Val(part$(n))
     If n = s Then
         ma.Assign w, RHS
     ElseIf n = 0 Then
@@ -300,7 +300,6 @@ Else
     End If
 End If
 End Sub
-
 Function anArray(Index As Long, RHS) As JsonArray
     Dim m As New JsonArray
     If IsObject(RHS) Then
@@ -389,7 +388,7 @@ End Function
 Property Get Json(Optional sp As Long = 0, Optional w As Long = -1) As String
     Dim i As Long, hlp$, acc$, nl$
     sp = Abs(sp)
-    If sp Then nl$ = vbCrLf + space$(sp): hlp$ = space$(sp): If w = -1 Then w = sp
+    If sp Then nl$ = vbCrLf + Space$(sp): hlp$ = Space$(sp): If w = -1 Then w = sp
     For i = 0 To count - 1
         acc$ = acc$ + hlp$ + nl$ + ToString2(i, sp - w * (sp > 0), w)
         If i = 0 Then
@@ -403,7 +402,7 @@ Property Get Json(Optional sp As Long = 0, Optional w As Long = -1) As String
         If sp = 0 Then
     Json = "[" + acc$ + "]"
     Else
-    Json = "[" + acc$ + vbCrLf + space(sp - w) + "]"
+    Json = "[" + acc$ + vbCrLf + Space(sp - w) + "]"
     End If
 End Property
 Property Get item(Index As Long)
@@ -413,7 +412,7 @@ Case 0
 Case 4, 5
     Set item = ar(Index)
 Case 33
-    item = val("" & ar(Index))
+    item = Val("" & ar(Index))
 Case Else
     item = ar(Index)
 End Select
@@ -426,7 +425,7 @@ Property Set item(Index As Long, RHS)
 End Property
 
 Property Get ItemPath(Path$, Optional sep As String = ".")
-Dim part$(), w As Long, n As Long
+Dim part$(), w As Long, n As Long, ma As JsonArray, mo As JsonObject
 part$ = Split2(Path$, sep)
 Dim m As Object
 
@@ -435,25 +434,27 @@ Set m = Me
 again:
 If n > UBound(part$) Then Exit Property
 If TypeOf m Is JsonArray Then
-    w = val(part$(n))
-    Select Case m.ValType(w)
+    Set ma = m
+    w = Val(part$(n))
+    Select Case ma.ValType(w)
     Case 0
     Case 4, 5
-        Set m = m(w)
+        Set m = ma(w)
         n = n + 1
         GoTo again
     Case Else
-        ItemPath = m(w)
+        ItemPath = ma(w)
     End Select
 Else
-    Select Case m.ValType(part$(n))
+    Set mo = m
+    Select Case mo.ValType(part$(n))
     Case 0
     Case 4, 5
-        Set m = m(part$(n))
+        Set m = mo(part$(n))
         n = n + 1
         GoTo again
     Case Else
-        ItemPath = m.Value(w)
+        ItemPath = mo(part$(n))
     End Select
 End If
 End Property
@@ -637,7 +638,7 @@ ElseIf ch Like "[+-0123456789.]" Then
             If InStr(ch$, ".") > 0 Then Mid$(ch$, InStr(ch$, ".")) = curdot$
             ma.Assign 0 + p(level), CDec(ch)
         Else
-            ma.Assign 0 + p(level), val(ch)
+            ma.Assign 0 + p(level), Val(ch)
         End If
     Else
         If Len(ch) > 28 Then
@@ -649,7 +650,7 @@ ElseIf ch Like "[+-0123456789.]" Then
             If InStr(ch$, ".") > 0 Then Mid$(ch$, InStr(ch$, ".")) = curdot$
             mo.Assign "" + p(level), CDec(ch)
         Else
-            mo.Assign "" + p(level), val(ch)
+            mo.Assign "" + p(level), Val(ch)
         End If
     End If
 End If
@@ -677,8 +678,10 @@ Dim b() As Byte
             BigNumber = CDec(ch)
         Else
             If InStr(ch$, curdot$) > 0 Then Mid$(ch$, InStr(ch$, curdot$)) = "."
-            BigNumber = val(ch)
+            BigNumber = Val(ch)
         End If
 End Function
+
+
 
 
